fixes wrong padding on social icons (navbar)

--- a/assets/css/app-fixed.css
+++ b/assets/css/app-fixed.css
@@ -5255,7 +5255,7 @@ ul.social-networks li.social-networks a:hover {
   opacity: 1;
 }
 .navbar .nav > li.social-networks > a {
-  padding: 10px 0;
+  padding: 8px 0;
   font-size: 22px;
 }
 .navbar .nav li.cart .btn-cart {
