--- a/assets/css/app-responsive.less
+++ b/assets/css/app-responsive.less
@@ -82,7 +82,7 @@ ul.social-networks{
     }
   }
 }
-.navbar .nav > li.social-networks > a{ padding: 10px 0; font-size: 22px; }
+.navbar .nav > li.social-networks > a{ padding: 8px 0; font-size: 22px; }
 
 .navbar .nav li.cart .btn-cart{.btn; margin-top: 3px;}
 
